--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,9 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  font_awesome_flutter: ^10.3.0
   flutter:
-    sdk: flutter
+    sdk: flutter 
 
   cupertino_icons: ^0.1.2
 
